--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@prisma/client": "^5.1.1",
     "@types/node": "20.2.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "mongodb": "^5.7.0",
+    "mongodb-client-encryption": "^2.9.0",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -28,6 +31,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/react-slick": "^0.23.10"
+    "@types/react-slick": "^0.23.10",
+    "prisma": "^5.1.1"
   }
 }
