--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-DATABASE_URL="mongodb+srv://megersa:qD7Lb5KVrIhwSkdG@cluster0.rwvipdm.mongodb.net/"
+DATABASE_URL="mongodb+srv://megersabmuleta01:uchWsan2TJ0wL0ET@cluster0.hffdtr0.mongodb.net/?retryWrites=true&w=majority"
