--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8080",
+    "gcp-build": "npm run build",
+    "deploy": "gcloud config set project afrobrave && gcloud app deploy app.yaml --version=0-1-0",
     "lint": "next lint"
   },
   "dependencies": {
